Fixed #196 - pre with horizontal scroll

--- a/frontend/static/css/posts.css
+++ b/frontend/static/css/posts.css
@@ -352,6 +352,8 @@
         border-radius: 20px;
         margin-top: 2em;
         margin-bottom: 2em;
+        overflow-x: scroll;
+        overflow-y: hidden;
     }
 
     .text-body figure {
